--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url = jdbc:mysql://localhost:3306/books
-#spring.datasource.username = root
-#spring.datasource.password =
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = jdbc:mysql://localhost:3306/books
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
